broken error handlers and working validators
