# utils/validate.js
@@ -1,0 +1,49 @@
+const validator = require('../validate');
+
+const saveContact = (req, res, next) => {
+  const validationRule = {
+    firstName: 'required|string',
+    lastName: 'required|string',
+    email: 'required|email',
+    favoriteColor: 'required|string',
+    birthday: 'string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+const saveShip = (req, res, next) => {
+  const validationRule = {
+    shipName: 'required|string',
+    transponderId: 'required|string',
+    weight: 'required|string',
+    portOrigin: 'required|string',
+    licenceIssued: 'required|string',
+    inspected: 'required|string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+module.exports = {
+  saveContact,
+  saveShip
+};
